@startuml


class Address {
  -double latitude
  -double longitude
  -String street
}


class User {
  -String nome
  -String email
  -String NIF
  -String password
  -int credits
  -String street
  -double latitude
  -double longitude
  -String number
  -String monthExpiration
  -String yearExpiration
  -String ccv
  newAddress(latitude, longitude, street)
  newCreditCard(number, monthExpiration, yearExpiration, ccv)
  saveUser()

}

class CreditCard {
   -String number
  -String monthExpiration
  -String yearExpiration
  -String ccv
}


class RegistUserController {
  newUser(nome, email, NIF, password, credits, street, latitude, longitude, number, monthExpiration, yearExpiration, ccv)
  sendEmail(email)
}

class EmailAPI {
sendEmail(email)
}

class UserHandler {
addUser(user)
}


class DataBase {
save(name, email, nif, password, credits, address, creditCard)
}

RegistUserUI ..> RegistUserController
RegistUserController ..> User
UserHandler ..> DataBase
RegistUserController ..> UserHandler
RegistUserController ..> EmailAPI
User "1" -- "1" Address: has
User "1" -- "1" CreditCard: has

@enduml